test/types/string/dmk/toint/toCodeopint_err.good
toCodeopint_err.chpl:6: error: halt reached - string.toCodepoint() only accepts single-codepoint strings
